--- a/413_Final/index.html
+++ b/413_Final/index.html
@@ -7,9 +7,27 @@
    <link href="index.css" rel="stylesheet">
 </head>
 <body>
+    <!--Navbar-->
+    <div class="topnav" id="myTopnav">
+        <a href="#home" class="active">Home</a>
+        <a href="#login">Login</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+
+
+
+
+
     <header>
         <h1> Meet the Team</h1>
     </header>
+
+
+
+
+
 
     <div id="container">
         <div class = "team">
@@ -40,18 +58,6 @@
 
 <!-- Move this into its own little module-->
 
-
-
-<form>
-
-    <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email"><br><br>
-    <label for="pwd">Password:</label><br>
-    <input type="password" id="pwd" name="pwd" minlength="8"><br><br>
-    <input type="submit" value ="Submit">
-
-
-</from>
 </body>
 
 </html>
