--- a/413_Final/index.html
+++ b/413_Final/index.html
@@ -9,8 +9,8 @@
 <body>
     <!--Navbar-->
     <div class="topnav" id="myTopnav">
-        <a href="#home" class="active">Home</a>
-        <a href="#login">Login</a>
+        <a href="index.html" class="active">Home</a>
+        <a href="login.html">Login</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </a>
