--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>ECE 413 Final</title>
-   <link href="index.css" rel="stylesheet">
+   <link href="../css/index.css" rel="stylesheet">
 </head>
 <body>
     <!--Navbar-->
@@ -48,13 +48,13 @@
      </div>
 
 
-     <div id ="project video">
+     <div id ="projectVideo">
         <h2>Project Video</h2>
-        <iframe width="420" height="315"
-        src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=1">
-        </iframe>
-    </div>
-
+        <div id="videodiv">
+            <iframe width="420" height="315"
+                src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=1">0
+            </iframe>
+        </div>
 
 </body>
 
